# MIA

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  commitAll.sh  windows_fix.sh
.github/workflows/: tests.yml
docs/: MIAManual.idx  MIAManual.tex
docs/TeX_files/: Automation.tex  CodingStandards.tex  D3CIntegration.tex  Developers.tex  Libraries.tex  MIAConfig.tex  MIASequencer.tex  MIAcommands.tex  MIAconcept.tex  Misc.tex  Utilities.tex  WoWFeatures.tex  WorkoutGeneration.tex  packages.tex  references.tex  settings.tex
logs/: test_log.txt
old_code_to_migrate/: MIAMain.cpp  updateRelease.sh
old_code_to_migrate/documentation/: MIAManual.idx  MIAManual.ind  MIAManual.tex
old_code_to_migrate/documentation/TeX_files/: Copywrite.tex  D3CIntegration.tex  MIAConfig.tex  MIASequencer.tex  MIAcommands.tex  MIAconcept.tex  Thumbs.db  WoWFeatures.tex  WorkoutGeneration.tex
old_code_to_migrate/documentation/other/: AlternateOSSyntax.txt  Cube format.txt  TODO Notes.txt  Template.txt  cube combinations.xlsx
old_code_to_migrate/documentation/workout analysis/: workoutPlots.py
old_code_to_migrate/inputFiles/: MIASequences.txt  wowgreens.txt
old_code_to_migrate/libs/database/: CMakeLists.txt  Credentials.hpp  MIADatabase.cpp  MIADatabase.hpp
old_code_to_migrate/libs/language/: CMakeLists.txt  Shengli.cpp  Shengli.hpp
old_code_to_migrate/old-projects/D3C/: desktop.ini
old_code_to_migrate/old-projects/D3C/pre-v1.200 files/D0sag3Command v1.1/: D0sag3Command.pro  D3CConversation.cpp  D3CConversation.h  D3CConvert.cpp  D3CConvert.h  D3CEncrypt.cpp  D3CEncrypt.h  D3CEncryptPW.cpp  D3CEncryptPW.h  D3CHelp.cpp  D3CHelp.h  D3CKinematics.cpp  D3CKinematics.h  D3CMath.cpp  D3CMath.h  D3CProgramConstants.cpp  D3CProgramConstants.h  D3CPrompt.cpp  D3CPrompt.h  d3cwindow.cpp  d3cwindow.h  d3cwindow.ui  main.cpp
old_code_to_migrate/old-projects/VKK/: Keys.cpp  Keys.h  Mailing_List_Wyrmrest.txt  VKK.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
old_code_to_migrate/old-projects/WoWDPSSim/: Mage.cpp  Mage.h  WoWDPSSim.pro  dpssim.cpp  dpssim.h  dpssim.ui  main.cpp
old_code_to_migrate/old-projects/d0sag3/: HeaderList.txt  d0sag3.pro  d3intmath.cpp  d3intmath.h  d3string.cpp  d3string.h  d3stringmath.cpp  d3stringmath.h  euler.cpp  euler.h
old_code_to_migrate/program/: Configurator.cpp  Configurator.hpp
old_code_to_migrate/terminal/: Commands.cpp  Commands.hpp  MIATerminal.cpp  MIATerminal.hpp
old_code_to_migrate/utilities/: MIASequencer.cpp  MIASequencer.hpp
release/: MIAWorkout
release/resources/: MIAConfig.MIA  WoWConfig.MIA
resources/: CMakeLists.txt  MIAConfig.MIA  MIASequences.MIA  MIATemplate.MIA  MIAWorkout.MIA  README.md  excuses.MIA
scripts/: README.md  comment_checker.py  increment_version.py  install.sh  setup.sh  uninstall.sh
